bk_ida/gccida/g2/count_or_remove_death_notes
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/count_or_remove_death_notes/src/flow.c:4733:29: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
count += ( ( unsigned int)( mode_class_0[v15] - 5) < 2) + 1; 
                            ^~~~~~~~~~~~
                            mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/count_or_remove_death_notes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/count_or_remove_death_notes/src/obj/flow.o] Error 1
